[gd_scene load_steps=2 format=3 uid="uid://bvu50jml3i41q"]

[ext_resource type="Script" path="res://gui/canvas/CanvasDrawer.gd" id="1_7o1wi"]

[node name="CanvasDrawer" type="PanelContainer"]
custom_minimum_size = Vector2(360, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_type_variation = &"CanvasDrawer"
script = ExtResource("1_7o1wi")

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="CanvasTitle" type="Label" parent="Layout"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_type_variation = &"CanvasDrawerTitle"
text = "Canvas"

[node name="ElementsList" type="VBoxContainer" parent="Layout"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_type_variation = &"CanvasDrawerElementList"
